# hexa-user-crud

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: http-server.rs  lib.rs
src/business/user/: mod.rs
src/business/user/dtos/: mod.rs  user_add_request.rs  user_delete_request.rs  user_find_request.rs  user_update_request.rs
src/business/user/model/: mod.rs  user.rs
src/business/user/ports/: mod.rs  user_repository_trait.rs  user_service_trait.rs
src/business/user/service/: user_service.rs
src/inbound/: mod.rs
src/inbound/axum_adapter/: setup.rs
src/inbound/axum_adapter/user/: create_user.rs  delete_user.rs  find_one_user.rs  find_user.rs  mod.rs  update_user.rs  user_error.rs
src/outbound/: mod.rs  repository_trait.rs
src/outbound/in_memory_repository_adapter/: in_memory_user_repository.rs
