[package]
name = "i-tantana"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
lazy_static = "1.5.0"
regex = "1.11.1"
rustls = { version = "0.23.17" }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.2.0", features = ["uuid", "axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
rcgen = "0.13.1"

[[bin]]
name = "http-server"
path = "src/http-server.rs"
